yiltc-v0.2-backup/testsuite/negative/arrow_tuple_return.yilt
// Negative: arrow syntax on a tuple return is rejected too — use bare parens.
fn pair() -> (int, str)
    return (1, "hi")

fn main()
    let (n, s) = pair()
    print(n)
    print(s)
